--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ ul.timeline li {
     position: relative;
     height: 3em;
     color: #888;
+    font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
